--- a/src/components/HomePage/CardLayout.css
+++ b/src/components/HomePage/CardLayout.css
@@ -1,12 +1,16 @@
 /* CardLayout.css */
-.card {
-    width: 250px;
-    height: 320px;
+
+  .card {
+    width: 200px; /* Adjust width as needed */
+    height: auto; /* Let the height adjust based on content */
     border-radius: 8px;
     box-shadow: 0px 0px 10px #ddd;
     overflow: hidden;
     transition: box-shadow 0.3s ease-in-out;
+   
   }
+  
+  
   
   .card:hover {
     box-shadow: 10px 10px 20px #ccc;
@@ -16,6 +20,7 @@
     width: 100%;
     height: 50%;
     object-fit: cover;
+  
   }
   
   .card-content {
