--- a/src/components/Auth/AuthForm.css
+++ b/src/components/Auth/AuthForm.css
@@ -1,15 +1,18 @@
 /* Modal Overlay */
 .auth-modal {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    top: 100px;
+    left: 300px;
+    width: 50%;
+    height: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    display: flex;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    flex-direction: column;
   }
   
   /* Modal Container */
@@ -18,7 +21,6 @@
     padding: 20px;
     width: 400px;
     border-radius: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
   }
   
@@ -72,6 +74,8 @@
   .auth-header {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    
   }
   
   .close-button {
