--- a/src/components/Movies/MovieItem.css
+++ b/src/components/Movies/MovieItem.css
@@ -1,12 +1,15 @@
 /* MovieItem.css */
 
+.movie-item{
+  display: flex;
+  background-color: antiquewhite;
+  border-radius: 10px;
+}
 .movie-item-card {
-    width: 250px;
+    width: 300px;
     height: 320px;
     margin: 16px;
     border-radius: 5px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s ease;
     overflow: hidden;
   }
   
@@ -28,6 +31,7 @@
     font-size: 18px;
     font-weight: bold;
     margin: 5px 0;
+    color:rgb(60, 38, 82);
   }
   
   .movie-item-release-date {
