--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,11 +1,11 @@
 /* Movies.css */
 
-.movies-container {
+/* .movies-container {
     margin: auto;
     margin-top: 40px;
     padding: 0 10px;
     text-align: center;
-  }
+  } */
   
   .movies-header {
     margin: auto;
@@ -15,7 +15,12 @@
     color: white;
     font-size: 24px;
     font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     border-radius: 5px;
+    margin-bottom: 20px;
+
   }
   
   .movies-list {
@@ -24,5 +29,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     gap: 20px;
+    margin: auto;
+    width: 80%;
   }
   
