--- a/src/profile/AdminProfile.css
+++ b/src/profile/AdminProfile.css
@@ -37,7 +37,9 @@
   
   /* Movies container */
   .movies-container {
-    width: 70%;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -59,7 +61,7 @@
   }
   
   /* Individual movie item styling */
-  .movie-item {
+  .admin_profile_movie_item {
     background-color: #00d386;
     color: white;
     text-align: center;
