--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #2b2d42;
-    padding: 10px 20px;
+    padding: 30px 20px;
     position: sticky;
     top: 0;
     z-index: 100;
@@ -32,15 +32,17 @@
     margin: 0 20px;
     display: flex;
     justify-content: center;
+    padding: 3px;
   }
   
   .search-input {
     width: 60%;
-    padding: 8px;
+    padding: 15px;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
     outline: none;
+    font-size: 14px;
   }
   
   .search-input::placeholder {
