--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,7 +32,8 @@
     justify-content: center;
   }
   
-  .search-input {
+  .search-input1 {
+    text-transform: capitalize;
     width: 100%;
     padding: 10px 8px;
     border-radius: 8px;
@@ -42,7 +43,7 @@
     font-size: 16px;
   }
   
-  .search-input::placeholder {
+  .search-input1::placeholder {
     color: white;
   }
   
