--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 3.5625rem;
     margin: auto;
     width: 80%;
   }
