--- a/src/profile/AdminProfile.css
+++ b/src/profile/AdminProfile.css
@@ -42,6 +42,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 30px;
+
   }
   
   /* Heading for added movies */
