--- a/src/profile/UserProfile.css
+++ b/src/profile/UserProfile.css
@@ -1,17 +1,20 @@
 /* General Container */
 .user-profile-container {
     display: flex;
-    width: 100%;
+    flex-direction: column;
+    width: 80%;
     font-family: Arial, sans-serif;
+    align-items: center;
+    text-align: center;
+    margin: auto;
   }
   
   /* Profile Info Section */
   .profile-info-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 60%;
     padding: 20px;
     text-align: center;
   }
@@ -33,14 +36,13 @@
   
   .user-info-item {
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    margin-bottom: 10px;
+   font-size: 40px;
+   font-weight:bold ;
   }
   
   /* Bookings Section */
   .bookings-container {
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -49,15 +51,16 @@
   .bookings-title {
     font-family: Verdana, Geneva, sans-serif;
     text-align: center;
-    padding: 20px;
+  
     font-size: 2rem;
   }
   
   .booking-list {
     margin: auto;
     display: flex;
-    flex-direction: column;
-    width: 80%;
+    flex-wrap: wrap;
+    gap: 1.25rem;
+    width: 100%;
   }
   
   .booking-item {
