--- a/src/profile/UserProfile.css
+++ b/src/profile/UserProfile.css
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     width: 60%;
-    padding: 20px;
+    padding:0px 20px;
     text-align: center;
   }
   
@@ -36,7 +36,7 @@
   
   .user-info-item {
     padding: 10px;
-   font-size: 40px;
+   font-size: 20px;
    font-weight:bold ;
   }
   
@@ -45,13 +45,12 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 20px;
   }
   
   .bookings-title {
     font-family: Verdana, Geneva, sans-serif;
     text-align: center;
-  
+    margin: 0px;
     font-size: 2rem;
   }
   
